# UburPython

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.server  README.md  docker-compose.es.yml  docker-compose.prebuilt.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
app/: main.py
app/api/: audio.py
app/bionode_grpc_clients/: __init__.py
app/bionode_grpc_clients/comm/: __init__.py  client.py
app/bionode_grpc_clients/comm/grpc_gen/: __init__.py  bionode_comm_pb2.py  bionode_comm_pb2_grpc.py  bionode_common_pb2.py  bionode_common_pb2_grpc.py
app/comm/: client.py
app/core/: codes.py  config.py  exception_handlers.py  exceptions.py  response.py  tags.py
app/embedding/: encoder.py  qwen_api_encoder.py
app/es/: index_mappings.py  search.py  sync.py
app/schemas/: audio.py  response.py
app/services/: audio.py  retrieval.py
deploy/: .deploy-marker
deploy/nginx/: uburnode.conf
docs/: retrieval-test-cases.md  uburnode-openapi.yaml
scripts/: eval_search_recall.py  export_onnx_model.py  gen_proto.sh  migrate_github_org.sh  seed_es_test_data.py  server_bootstrap.sh  setup_github_secrets.sh  sync_es_from_comm.py  test_grpc_connect.py
tests/: test_api_response.py  test_comm_client.py  test_comm_grpc.py  test_encoder_factory.py  test_es_search_mappings.py  test_es_sync.py  test_exceptions.py  test_qwen_api_encoder.py  test_retrieval.py  test_schemas.py  test_sync_es_from_comm.py
